--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">
+          <img
+            class="logo-shuriken"
+            src="./assets/img/shuriken.png"
+            alt="shuriken logo"
+          />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,7 +42,9 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" 
+              href="https://www.linkedin.com/in/marcoarath/"
+              target=“_blank”>Linkedin</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -46,7 +54,8 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Dropdown
+                
+              Proyectos
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
