ci: modificacion navbar

--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                
               Proyectos
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Dime tu nombre</a></li>
+                <li><a class="dropdown-item" href="#">Calculadora</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Something else here</a>
