--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <!-- Bootstrap CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
+    />
     <!-- CSS Personalizado -->
     <link rel="stylesheet" href="./assets/styles/main.css" />
   </head>
@@ -42,9 +47,12 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" 
-              href="https://www.linkedin.com/in/marcoarath/"
-              target=“_blank”>Linkedin</a>
+              <a
+                class="nav-link"
+                href="https://www.linkedin.com/in/marcoarath/"
+                target="“_blank”"
+                >Linkedin</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
@@ -54,7 +62,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-              Proyectos
+                Proyectos
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dime tu nombre</a></li>
@@ -72,6 +80,114 @@
         </div>
       </div>
     </nav>
+    <!-- Acerca de -->
+    <div class="container mt-4">
+      <div class="row">
+        <div class="col">
+          <h1>Marco Arath</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <h3>Desarrollador de Artes Oscuras</h3>
+        </div>
+        <div class="col-12 col-md-6">
+          <h3>DJ de Noche</h3>
+        </div>
+      </div>
+    </div>
+    <!-- Carrusel -->
+    <div class="container my-4 text-center">
+      <div class="row justify-content-center">
+        <!-- Carrusel -->
+        <div class="col-9 mb-2">
+          <div
+            id="carouselExample"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img
+                  src="./assets/img/basket01.jpg"
+                  class="d-block w-100 rounded-5"
+                  alt="hombres jugando basket"
+                />
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img
+                  src="./assets/img/basket02.jpg"
+                  class="d-block w-100 rounded-5"
+                  alt="balon de basket en la hierba"
+                />
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img
+                  src="./assets/img/basket03.jpg"
+                  class="d-block w-100 rounded-5"
+                  alt="canasta de basket"
+                />
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img
+                  src="./assets/img/basket1280.jpg"
+                  class="d-block w-100 rounded-5"
+                  alt="mujeres jugando basket en duela"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <!-- descripcion carrusel -->
+        <div class="col-12 col-lg-3">
+          <div class="row">
+            <p>
+              Me inicie como desarrollador con tecnicas ninjas Lorem, ipsum
+              dolor sit amet consectetur adipisicing elit. Magnam numquam iure
+              eaque et amet. Quam molestias officia, mollitia fugiat sed quia
+              expedita ad illo nisi, natus numquam facere maiores reprehenderit!
+            </p>
+          </div>
+        </div>
+        <!-- Boton linkedin -->
+        <div class="row">
+          <div class="col">
+            <a href="https://www.linkedin.com/in/marcoarath/" target="_blank">
+              <button type="button" class="btn btn-dark">
+                <i class="bi bi-linkedin"></i> Contactame
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Ondas -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,192L48,170.7C96,149,192,107,288,112C384,117,480,171,576,202.7C672,235,768,245,864,234.7C960,224,1056,192,1152,181.3C1248,171,1344,181,1392,186.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
