--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
         </div>
       </div>
     </div>
-    <!-- Carrusel -->
+    <!-- Carrosel -->
     <div class="container my-4 text-center">
       <div class="row justify-content-center">
-        <!-- Carrusel -->
+        <!-- Carrosel -->
         <div class="col-9 mb-2">
           <div
             id="carouselExample"
@@ -110,29 +110,29 @@
               <div class="carousel-item active" data-bs-interval="2000">
                 <img
                   src="./assets/img/basket01.jpg"
-                  class="d-block w-100 rounded-5"
-                  alt="hombres jugando basket"
+                  class="d-block w-100 rounded"
+                  alt="Ninja en espera"
                 />
               </div>
               <div class="carousel-item" data-bs-interval="3000">
                 <img
                   src="./assets/img/basket02.jpg"
-                  class="d-block w-100 rounded-5"
-                  alt="balon de basket en la hierba"
+                  class="d-block w-100 rounded"
+                  alt="Ninja dando patada"
                 />
               </div>
               <div class="carousel-item" data-bs-interval="3000">
                 <img
                   src="./assets/img/basket03.jpg"
-                  class="d-block w-100 rounded-5"
-                  alt="canasta de basket"
+                  class="d-block w-100 rounded"
+                  alt="Mujer ninja"
                 />
               </div>
               <div class="carousel-item" data-bs-interval="3000">
                 <img
                   src="./assets/img/basket1280.jpg"
-                  class="d-block w-100 rounded-5"
-                  alt="mujeres jugando basket en duela"
+                  class="d-block w-100 rounded"
+                  alt="Ninjas con katana"
                 />
               </div>
             </div>
@@ -162,33 +162,44 @@
             </button>
           </div>
         </div>
-        <!-- descripcion carrusel -->
+        <!-- descripción carrosel -->
         <div class="col-12 col-lg-3">
+          <!-- Descripción -->
           <div class="row">
-            <p>
-              Me inicie como desarrollador con tecnicas ninjas Lorem, ipsum
-              dolor sit amet consectetur adipisicing elit. Magnam numquam iure
-              eaque et amet. Quam molestias officia, mollitia fugiat sed quia
-              expedita ad illo nisi, natus numquam facere maiores reprehenderit!
-            </p>
+            <div class="col">
+              <p>
+                Me inicié como desarrollador con técnicas ninjas Lorem ipsum,
+                dolor sit amet consectetur adipisicing elit. Quam, inventore.
+                Aut magni iure molestiae nihil. Reprehenderit totam
+                exercitationem deleniti commodi, delectus impedit praesentium
+                unde autem porro vitae dolorum aut quibusdam.
+              </p>
+            </div>
           </div>
-        </div>
-        <!-- Boton linkedin -->
-        <div class="row">
-          <div class="col">
-            <a href="https://www.linkedin.com/in/marcoarath/" target="_blank">
-              <button type="button" class="btn btn-dark">
-                <i class="bi bi-linkedin"></i> Contactame
-              </button>
-            </a>
+          <!-- Botón linkedin -->
+          <div class="row">
+            <div class="col">
+              <a
+                href="https://www.linkedin.com/in/marcoarath"
+                target="_blank"
+              >
+                <button type="button" class="btn btn-dark">
+                  <i class="bi bi-linkedin"></i> Contáctame
+                </button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Ondas -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,192L48,170.7C96,149,192,107,288,112C384,117,480,171,576,202.7C672,235,768,245,864,234.7C960,224,1056,192,1152,181.3C1248,171,1344,181,1392,186.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-
-
+    <!-- Ondas SVG -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#212529"
+        fill-opacity="1"
+        d="M0,224L34.3,224C68.6,224,137,224,206,240C274.3,256,343,288,411,282.7C480,277,549,235,617,224C685.7,213,754,235,823,250.7C891.4,267,960,277,1029,272C1097.1,267,1166,245,1234,229.3C1302.9,213,1371,203,1406,197.3L1440,192L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+      ></path>
+    </svg>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
