--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     />
     <!-- CSS Personalizado -->
     <link rel="stylesheet" href="./assets/styles/main.css" />
+    <script>
+      console.log('Holi Crayoli');
+      let d = new Date();
+      console.log(`Se inicio el proceso a las ${d.getHours()} h.`);
+      
+    </script>
   </head>
   <body>
     <!-- navbar -->
@@ -109,7 +115,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
                 <img
-                  src="./assets/img/basket01.jpg"
+                  src="./assets/img/"
                   class="d-block w-100 rounded"
                   alt="Ninja en espera"
                 />
@@ -162,7 +168,7 @@
             </button>
           </div>
         </div>
-        <!-- descripción carrosel -->
+        <!-- Descripción carrosel -->
         <div class="col-12 col-lg-3">
           <!-- Descripción -->
           <div class="row">
@@ -192,6 +198,27 @@
         </div>
       </div>
     </div>
+    <!-- Acceso a DOM -->
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-5 text-center">
+          <p id="name"> Mi nombre </p>
+          <!-- <p onClick="changeColoToRed()">Cambia el color a rojo </p> -->
+        </div>
+      </div>
+      <!-- Botones cambia el color -->
+      <div class="row">
+        <div class="col">
+
+        </div>
+        <div class="col">
+          <button onClick="changeColorToRed()" type="button" class="btn btn-danger">Rojo</button>
+        </div>
+        <div class="col">
+
+        </div>
+      </div>
+    </div>
     <!-- Ondas SVG -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path
@@ -205,5 +232,13 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      const refName = document.getElementById('name');
+      console.log(refName);
+      refName.innerHTML = 'Marco <strong>Arath</strong> ';
+    </script>
+    <!-- Script externo -->
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
