--- a/assets/html/mi-nombre.html
+++ b/assets/html/mi-nombre.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mi nombre</title>
+    <title>Dime tu Nombre</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -29,11 +29,11 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-sm bg-dark" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/index.html">
           <img
-            class="logo-shuriken"
-            src="../img/shuriken.png"
-            alt="shuriken logo"
+            class="logo-basket"
+            src="../img/basketball-ball.png"
+            alt="basket logo"
           />
         </a>
         <button
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a
@@ -71,7 +71,7 @@
                 Proyectos
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Dime tu nombre</a></li>
+                <li><a class="dropdown-item" href="./">Dime tu nombre</a></li>
                 <li><a class="dropdown-item" href="#">Calculadora</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
@@ -99,13 +99,13 @@
     </div>
     
     <!-- Ondas SVG -->
-      <svg class="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+<!--       <svg class="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#212529"
           fill-opacity="1"
           d="M0,224L34.3,224C68.6,224,137,224,206,240C274.3,256,343,288,411,282.7C480,277,549,235,617,224C685.7,213,754,235,823,250.7C891.4,267,960,277,1029,272C1097.1,267,1166,245,1234,229.3C1302.9,213,1371,203,1406,197.3L1440,192L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
         ></path>
-      </svg> 
+      </svg>  -->
 
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
