--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            class="logo-shuriken"
-            src="./assets/img/shuriken.png"
-            alt="shuriken logo"
+            class="logo-basket"
+            src="./assets/img/basketball-ball.png"
+            alt="basket logo"
           />
         </a>
         <button
@@ -219,7 +219,7 @@
       </div>
     </div>
     <br>
-    <!--  -->
+    <!-- Boton reset -->
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-4 text-center"><p class="text-color" id="verde" onclick="changeColorParagraph('green', this)">Me cambiare a Verde</p></div>
@@ -242,9 +242,9 @@
           <div class="card text-bg-dark border-dark ">
             <img class="card-img-top" src="./assets/img/basket01.jpg" alt="canasta de basquetbol con pelota entrando">
           </div>
-          <div class="card-body">
+          <div class="card-body my-2">
             <h4 class="card-title">Imagen 1</h4>
-            <p class="card-text">Información</p>
+            <p class="card-text">Balón de basquetbol entrando a la canasta</p>
           </div>
         </div>
       
@@ -254,9 +254,9 @@
           <div class="card text-bg-secondary border-dark">
             <img class="card-img-top" src="./assets/img/basket02.jpg" alt="canasta con cielo de fondo">
           </div>
-          <div class="card-body">
+          <div class="card-body my-2">
             <h4 class="card-title">Imagen 2</h4>
-            <p class="card-text">Información</p>
+            <p class="card-text">Canasta de basquetbol al aire libre</p>
           </div>
         </div>
       
@@ -266,9 +266,9 @@
           <div class="card text-bg-danger border-dark">
             <img class="card-img-top" src="./assets/img/basket03.jpg" alt="hombre mirando la canasta">
           </div>
-          <div class="card-body">
+          <div class="card-body my-2">
             <h4 class="card-title">Imagen 3</h4>
-            <p class="card-text">Información</p>
+            <p class="card-text">Hombre en cancha de basquetbol callejera</p>
           </div>
         </div>
       </div>
