--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="./assets/html/mi-nombre.html">Dime tu nombre</a></li>
-                <li><a class="dropdown-item" href="#">Calculadora</a></li>
+                <li><a class="dropdown-item" href="./assets/html/calculadora.html">Calculadora</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Something else here</a>
