--- a/assets/html/mi-nombre.html
+++ b/assets/html/mi-nombre.html
@@ -86,7 +86,7 @@
         </div>
       </div>
     </nav>
-
+    <!-- DIME TU NOMBRE -->
     <div class="row justify-content-center mt-2">
       <div class="col-12 text-center">
         <h1 id="change-name"> Dime tu nombre </h1>
