--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="./assets/html/mi-nombre.html">Dime tu nombre</a></li>
                 <li><a class="dropdown-item" href="./assets/html/calculadora.html">Calculadora</a></li>
+                <li><a class="dropdown-item" href="./assets/html/adivinaelnumero.html">Adivina el número</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Something else here</a>
