arreglados varios colores del nav

--- a/assets/html/adivinaelnumero.html
+++ b/assets/html/adivinaelnumero.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-sm bg-dark" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-sm bg-dark text-light" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
                 <img
@@ -32,19 +32,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link active text-light" aria-current="page" href="/index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link"
+                      class="nav-link text-light"
                       href="https://www.linkedin.com/in/marcoarath/"
                       target="“_blank”"
                       >Linkedin</a
                     >
                   </li>
-                  <li class="nav-item dropdown">
+                  <li class="nav-item dropdown text-light">
                     <a
-                      class="nav-link dropdown-toggle"
+                      class="nav-link dropdown-toggle text-light"
                       href="#"
                       role="button"
                       data-bs-toggle="dropdown"
@@ -62,7 +62,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled text-dark">Disabled</a>
                   </li>
                 </ul>
               </div>
