--- a/assets/html/calculadora.html
+++ b/assets/html/calculadora.html
@@ -40,7 +40,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link text-secondary"
+                  class="nav-link text-light"
                   href="https://www.linkedin.com/in/marcoarath/"
                   target="“_blank”"
                   >Linkedin</a
@@ -48,7 +48,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle text-secondary"
+                  class="nav-link dropdown-toggle text-light"
                   href="#"
                   role="button"
                   data-bs-toggle="dropdown"
@@ -66,7 +66,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link disabled text-dark">Disabled</a>
               </li>
             </ul>
           </div>
