--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link text-light"
                 href="https://www.linkedin.com/in/marcoarath/"
                 target="“_blank”"
                 >Linkedin</a
@@ -62,7 +62,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle text-light"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -81,7 +81,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link disabled text-dark">Disabled</a>
             </li>
           </ul>
         </div>
