--- a/assets/html/adivinaelnumero.html
+++ b/assets/html/adivinaelnumero.html
@@ -55,6 +55,8 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="./assets/html/mi-nombre.html">Dime tu nombre</a></li>
                       <li><a class="dropdown-item" href="./assets/html/calculadora.html">Calculadora</a></li>
+                      <li><a class="dropdown-item" href="./assets/html/adivinaelnumero.html">Adivina el número</a></li>
+                      <li><a class="dropdown-item" href="./assets/html/fechas.html">Fechas</a></li>
                       <li><hr class="dropdown-divider" /></li>
                       <li>
                         <a class="dropdown-item" href="#">Something else here</a>
